crates/loxia-tui/src/views/snapshots/loxia_tui__views__settings__tests__about_snapshot.snap
---
source: crates/loxia-tui/src/views/settings.rs
assertion_line: 2076
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 14 },
    content: [
        "┌──────────────┐┌About─────────────────────────────────────────────────────────────────────────────┐",
        "│Servers       ││loxia 0.1.0-rc.2                                                                  │",
        "│Audio         ││A terminal music client for Emby                                                  │",
        "│Cache         ││                                                                                  │",
        "│Transcode     ││Licence      GPL-3.0-or-later                                                     │",
        "│Interface     ││libmpv       0.35.1 (loaded from /usr/lib/libmpv.so.2)                            │",
        "│Sorting       ││                                                                                  │",
        "│Equalizer     ││[l] Third-party licences   [d] Copy diagnostics                                   │",
        "│Keybindings   ││                                                                                  │",
        "│About         ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "└──────────────┘└──────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 0, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 1, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 1, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 7, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Indexed(8), underline: Reset, modifier: NONE,
        x: 6, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 9, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 10, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 11, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 12, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
